--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,3 +1,5 @@
+<app-jumbotron></app-jumbotron>
+<app-banner></app-banner>
 <app-carousel-image-section
   (navigateClicked)="navigateToHomeIntro()"
 ></app-carousel-image-section>
