--- a/src/assets/styles/generic-styles.scss
+++ b/src/assets/styles/generic-styles.scss
@@ -196,6 +196,10 @@ hr.style-dotted-footer {
   color: $active-text-color !important;
 }
 
+.primary-color{
+  color: $btn-primary;
+}
+
 @media only screen and (max-width: 480px) {
   .desktop-wrapper {
     display: none;
