--- a/src/app/components/jumbotron/jumbotron.component.html
+++ b/src/app/components/jumbotron/jumbotron.component.html
@@ -1,20 +1,19 @@
 <!-- Jumbo-tron starts-->
-<div class="jumbo-tron d-flex align-items-center my-5">
+<div class="jumbo-tron d-flex align-items-center my-lg-5 my-2">
     <div class="container">
         <div class="row">
-            <div class="col-lg-7 order-1 order-sm-1 d-flex flex-column text-center text-lg-start my-5-sm">
-                <div class="active-link" mt-5 pt-5>Welcome to Small Wonders</div>
-
+            <div class="col-lg-7 order-1 order-sm-1 d-flex flex-column text-center text-lg-start pt-1 mt-lg-5 pt-lg-5">
                 <div>
+                    <div class="active-link jumbo-tron-header mb-2 mb-lg-4">Welcome to Small Wonders</div>
                     <div class="text-center text-lg-start jumbo-tron-text">
-                        <div class="mb-5 mb-sm-3 col-sm-8">Designed to Equip
+                        <div class="mb-lg-5 mb-3 col-sm-8">Designed to Equip
                             Students with the Skills necessary for
                             Success!</div>
-                        <button type="button" class="btn btn-primary button-rounded px-5 mt-lg-5">Get started</button>
+                        <button type="button" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-4 mt-lg-3">Read More <i class="fa fa-angle-right"></i></button>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-5 order-2 order-sm-2 text-center mb-10 jumbo-tran-animation">
+            <div class="col-lg-5 order-2 order-sm-2 text-center mb-10 jumbo-tran-animation mt-5 mt-lg-0">
                 <img src="assets/img/homepage/home-boy.svg" class="img-fluid" alt="">
                 <!-- <img src="assets/img/homepage/blue-bg-boy.svg" class="blue img-fluid" alt=""> -->
                 <!-- <img src="assets/img/homepage/gold-bg-boy.svg" class="gold img-fluid" alt=""> -->
