--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,8 +1,9 @@
 <app-jumbotron></app-jumbotron>
 <app-banner></app-banner>
-<app-carousel-image-section
+
+<!-- <app-carousel-image-section
   (navigateClicked)="navigateToHomeIntro()"
-></app-carousel-image-section>
+></app-carousel-image-section> -->
 <app-home-intro-section></app-home-intro-section>
 <app-home-curriculum-section
   [displayList]="curriculumList"
