--- a/src/app/pages/home-page/contact-form/contact-form.component.html
+++ b/src/app/pages/home-page/contact-form/contact-form.component.html
@@ -1,13 +1,34 @@
-<div class="contact-form-section">
-<!--  <div class="cf_img_1"></div>-->
+<div class="container">
+<div class="banner justify-content-center d-flex">
+  <div class="contactus-form ">
+    <form>
+      <div class="row">
+        <div class="form-group row">
+          <div class="col-lg-5">
+            <label for="staticEmail" class="col-form-label">Email</label>
+            <input type="text" class="form-control" id="staticEmail">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+          </div>
+        </div>
+      </div>
+    </form>
+
+    
+  </div>
+</div>
+</div>
+
+<!-- <div class="contact-form-section">
   <div class="cf_img_2"></div>
   <div class="cf_img_3"></div>
 
   <div class="container">
     <div class="row">
-<!--      <div class="col-md-5 order-12 order-md-1 text-center">-->
-<!--        <img src="/assets/img/rainbow-kid.png" class="contact-form-image" />-->
-<!--      </div>-->
       <div class="col-md-7 order-1 order-md-12 text-left">
         <div class="con-form">
           <h3>Contact Us</h3>
@@ -87,4 +108,4 @@
     </div>
   </div>
   <HR WIDTH="75%" COLOR="#FF0000" SIZE="4">
-</div>
+</div> -->
