--- a/src/app/pages/home-page/contact-form/contact-form.component.scss
+++ b/src/app/pages/home-page/contact-form/contact-form.component.scss
@@ -1,5 +1,17 @@
 @import "../../../../assets/styles/variables.scss";
 
+.banner{
+  background-color: black;
+  height: 730px;
+  width: 100%;
+}
+
+.contactus-form{
+  background-color: white;
+  height: 400px;
+  width: 600px;
+}
+
 .contact-form-section {
   width: 100%;
   padding: 3em 0 0;
