--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -5,6 +5,7 @@
   (navigateClicked)="navigateToHomeIntro()"
 ></app-carousel-image-section> -->
 <app-home-intro-section></app-home-intro-section>
+<app-recent-events></app-recent-events>
 <app-home-curriculum-section
   [displayList]="curriculumList"
   [titleIntro]=""
