footer, testimonial, contact us

--- a/src/app/components/recent-events/recent-events.component.html
+++ b/src/app/components/recent-events/recent-events.component.html
@@ -1,23 +1,18 @@
 <div class="container">
-    <div class="event-title active-link text-center my-lg-5">Events and Functions</div>
+    <div class="event-title active-link text-center my-lg-3">Events and Functions</div>
 
-    <div class="event-sub-title text-center my-lg-5">Recent Events</div>
+    <div class="event-sub-title text-center my-3 mb-lg-5 mb-4">Recent Events</div>
 
     <div class="event-tiles-container">
         <div class="row d-flex align-items-center">
-            <div class="col-lg-6 d-flex align-items-center justify-content-center">
+            <div class="col-lg-6 col-12 d-flex align-items-center justify-content-center my-2">
                 <div class="event-tile">
                     <img src="../../../assets/img/event-1.jpeg" alt="">
                     <div>
-                    
-                        <!-- <div class="col-lg-4 d-flex align-items-center justify-content-center">sdfkjsfh sfskdf</div>
-                    
-                        <div class="col-lg-4 d-flex align-items-center justify-content-center">sdfihudsf usd</div> -->
-                    
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 d-flex align-items-center justify-content-center">
+            <div class="col-lg-6 col-12 d-flex align-items-center justify-content-center my-2">
                 <div class="event-tile">
                     <img src="../../../assets/img/event-1.jpeg" alt="">
                 </div>
