--- a/src/app/pages/home-page/contact-form/contact-form.component.html
+++ b/src/app/pages/home-page/contact-form/contact-form.component.html
@@ -1,24 +1,89 @@
+<div class="contact-sec">
 <div class="container">
-<div class="banner justify-content-center d-flex">
-  <div class="contactus-form ">
-    <form>
-      <div class="row">
-        <div class="form-group row">
-          <div class="col-lg-5">
-            <label for="staticEmail" class="col-form-label">Email</label>
-            <input type="text" class="form-control" id="staticEmail">
+  <div class="banner justify-content-center d-flex">
+    <div class="contactus-form p-lg-5 p-3">
+      <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
+        <div class="row my-lg-3 my-2">
+          <div class="col-lg-6">
+            <div class="form-group row">
+              <label for="inputFN" class="col-5 col-form-label">First Name</label>
+              <div class="col-7">
+                <input type="text" class="form-control" id="inputFN" placeholder="First Name"
+                  formControlName="firstName" [ngClass]="{'error': submitted && contactForm.controls['firstName'].errors && contactForm.controls['firstName'].errors['required']}">
+                
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="form-group row">
+              <label for="inputLN" class="col-5 col-form-label">Last Name</label>
+              <div class="col-7">
+                <input type="text" class="form-control" id="inputLN" placeholder="Last Name" formControlName="lastName"
+                [ngClass]="{'error': submitted && contactForm.controls['lastName'].errors && contactForm.controls['lastName'].errors['required']}">
+              </div>
+            </div>
           </div>
         </div>
-        <div class="form-group row">
-          <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-          <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-          </div>
-        </div>
-      </div>
-    </form>
 
-    
+        <div class="row my-lg-3 my-2">
+          <div class="col-lg-6">
+            <div class="form-group row">
+              <label for="inputEmail" class="col-5 col-form-label">Email Address</label>
+              <div class="col-7">
+                <input type="email" class="form-control" id="inputEmail" placeholder="Email Address"
+                  formControlName="email"
+                  [ngClass]="{'error': submitted && contactForm.controls['email'].errors && contactForm.controls['email'].errors['required']}">
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="form-group row">
+              <label for="inputPhone" class="col-5 col-form-label">Phone Number</label>
+              <div class="col-7">
+                <input type="text" class="form-control" id="inputPhone" placeholder="Phone Number"
+                  formControlName="phone" [ngClass]="{'error': submitted && contactForm.controls['phone'].errors && contactForm.controls['phone'].errors['required']}">
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row my-lg-3 my-2">
+          <div class="col-lg-12">
+            <div class="form-group">
+              <label for="inputMsg" class="col-form-label">Message *</label>
+              <textarea class="form-control" id="inputMsg" rows="3" formControlName="message"
+                placeholder="Message"
+                [ngClass]="{'error': submitted && contactForm.controls['message'].errors && contactForm.controls['message'].errors['required']}"></textarea>
+              
+            </div>
+          </div>
+        </div>
+
+        <div class="row d-flex justify-content-lg-end mt-5">
+          <div class="col-lg-5 col-12 justify-content-center justify-content-lg-end text-center">
+            <button type="submit" class="shadow-lg btn btn-primary button-rounded px-4 py-3 mt-1 mt-lg-3 ">Send Message
+              <i class="fa fa-angle-right"></i></button>
+          </div>
+        </div>
+
+      </form>
+      <!-- <form>
+        <div class="row">
+          <div class="form-group row">
+            <div class="col-lg-5">
+              <label for="staticEmail" class="col-form-label">Email</label>
+              <input type="text" class="form-control" id="staticEmail">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+            <div class="col-sm-10">
+              <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+            </div>
+          </div>
+        </div>
+      </form> -->
+    </div>
   </div>
 </div>
 </div>
