--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,72 @@
-<div class="footerNew">
-  <div class="container">
+<div class="custom-footer py-5">
+  <div class="container px-5 px-lg-0">
+    <div class="row">
+      <div class="col-sm-3 mb-5 footer-logo text-lg-start text-center">
+        <img src="../../../assets/img/new-logo.png">
+        <div class="p-3">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna
+          aliqua.
+        </div>
+      </div>
+
+      <div class="col-sm-1"></div>
+      <div class="col-sm-4 mb-5">
+        <div class="row">
+          <div class="col-6 header">
+            Links
+            <ul class="mt-5 ps-0">
+              <li class="my-2"><a [routerLink]="['/']">Home</a></li>
+
+              <li class="my-2"><a [routerLink]="['/about-us']">About Us</a></li>
+              <li class="my-2"><a [routerLink]="['/curriculum']">Curriculum</a></li>
+              <li class="my-2"><a [routerLink]="['/admissions']">Admissions</a></li>
+              <li class="my-2"><a [routerLink]="['/schedule-tour']">Schedule a Tour</a></li>
+              <li class="my-2"><a [routerLink]="['/activities']">Activities</a></li>
+              <li class="my-2"><a [routerLink]="['/books-and-beyond']">Pedagogy</a></li>
+            </ul>
+          </div>
+          <div class="col-6 header">
+            Company
+            <ul class="mt-5 ps-0">
+              <li class="my-2"><a [routerLink]="['/books-and-beyond']">Terms & Conditions</a></li>
+              <li class="my-2"><a [routerLink]="['/books-and-beyond']">Privacy Policy</a></li>
+              <li class="my-2"><a [routerLink]="['/books-and-beyond']">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-3 mb-5 px-lg-0 text-lg-start text-center">
+        <div class="row header">Subscribe to our newsletter</div>
+        <div class="row my-5 px-lg-0 subscribe">
+          <input type="text" placeholder="Your Emails">
+          <button>Subscribe</button>
+        </div>
+        <div class="d-flex px-lg-0 align-items-center justify-content-center justify-content-lg-start align-items-lg-start">
+          <a href="https://www.facebook.com/smallwonderspanipat/" target="_blank">
+            <img class="social me-1" src="../../../assets/icons/social-fb.png">
+          </a>
+          <a href="https://www.instagram.com/small_wonders_panipat/" target="_blank">
+            <img class="social mx-1" src="../../../assets/icons/social-insta.png">
+          </a>
+          <a href="https://www.youtube.com/channel/UCUcd6kNDBI7x-yvoYrdnstw" target="_blank">
+            <img class="social ms-1" src="../../../assets/icons/social-youtube.png">
+          </a>
+        </div>
+      </div>
+    </div>
+    <hr class="hr text-white" />
+    <div class="text-center copy-write">
+      © Copyright 2022 <a href="http://www.smallwonders.edu.in/">www.smallwonders.edu.in</a> All rights reserved.
+    </div>
+  </div>
+</div>
+
+
+<!-- <div class="footerNew">
+  <div class="container"> -->
+
 <!--    <div class="row align-items-center justify-content-center footerNew-top-section">-->
 <!--      <div class="boatImage"></div>-->
 <!--      <div class="col-4">-->
@@ -30,7 +97,7 @@
 <!--      <div class="planetImage"></div>-->
 <!--    </div>-->
 
-    <div class="footerNew-secondary-nav">
+<!-- <div class="footerNew-secondary-nav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link"><i class="fa fa-home"></i></a>
@@ -84,19 +151,19 @@
           >
         </li>
       </ul>
-    </div>
+    </div> -->
 
-    <div class="footerNew-third-nav">
+<!-- <div class="footerNew-third-nav">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/blog']"> Blog </a>
-        </li>
+        </li> -->
 <!--        <li class="nav-item">-->
 <!--          <a [routerLink]="['/admissions']" class="nav-link" target="_self">-->
 <!--            Admission form-->
 <!--          </a>-->
 <!--        </li>-->
-        <li class="nav-item">
+<!-- <li class="nav-item">
           <a [routerLink]="['/schedule-tour']" class="nav-link" target="_self">
             Schedule a tour
           </a>
@@ -137,4 +204,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
