--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,270 +1,338 @@
 @import "../../../assets/styles/variables.scss";
 
-.footerNew {
-  background: url(/assets/img/footer-background.png) repeat;
-  color: $white-primary;
-  position: relative;
-  //padding-top: 2em;
-  // margin-top: 20%;
-
-  input {
-    border-radius: 20px;
-  }
-
-  .boatImage {
-    background: url("/assets/img/bg-widget-2.png") no-repeat;
-    width: 83px;
-    height: 90px;
-    top: 20%;
-    position: absolute;
-    left: 10%;
-  }
-
-  .planetImage {
-    background: url("/assets/img/bg-widget-3.png") no-repeat;
-    width: 83px;
-    height: 90px;
-    top: 20%;
-    position: absolute;
-    right: 10%;
-  }
-
-  .rounded-button {
-    border-radius: 20px;
-    background: $button-primary;
-    color: #fff;
-    padding: 0.25em 1.5em;
-    position: unset;
-    right: 3em;
-    z-index: 1000;
-  }
-}
-
-.footerNew-secondary-nav {
-  //margin: 3em 0 1em;
-  border-top: 1px dashed $white-primary;
-  border-bottom: 1px dashed $white-primary;
-
-  ul {
-    flex-direction: row;
-    justify-content: center;
-
-    li {
-      a {
-        padding: 10px 1em !important;
-        color: #fff;
-        font-size: 1em;
-      }
-    }
-  }
-}
-
-.footerNew-third-nav {
-  ul {
-    flex-direction: row;
-    justify-content: center;
-
-    li {
-      a {
-        padding: 10px 1em !important;
-        color: #fff;
-        font-size: 1em;
-      }
-    }
-  }
-}
-
-.footer-info-bar {
-  display: flex;
-  justify-content: center;
+.custom-footer {
+  background-color: $theme-blue;
+  color: white !important;
+  font-size: 15px;
 
   a {
-    margin: 0 0 0 10px;
-
-    i {
-      padding: 0;
-      width: 35px;
-      height: 35px;
-      border-radius: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .fa-facebook-official {
-      background: #3c58a1;
-      color: #fff;
-    }
-
-    .fa-instagram {
-      color: #fff;
-      background: linear-gradient(
-          45deg,
-          #f09433,
-          #e6683c 25%,
-          #dc2743 50%,
-          #cc2366 75%,
-          #bc1888
-      );
-    }
-
-    .fa-youtube {
-      background: #fe1f1f;
-      color: #fff;
-    }
-  }
-}
-
-.logo-img-footer {
-  width: 150px;
-  height: auto;
-  background: $white-primary;
-  z-index: 1000;
-  padding: 1%;
-  border-radius: 20px;
-}
-
-@media only screen and (min-width: 850px) and (max-width: 960px) {
-  .logo-img-footer {
-    width: 100px;
-    margin-block-start: -180px;
-  }
-}
-
-@media only screen and (min-width: 750px) and (max-width: 850px) {
-  .logo-img-footer {
-    width: 90px;
-    margin-block-start: -190px;
-  }
-}
-
-@media only screen and (max-width: 750px) {
-  .logo-img-footer {
-    width: 80px;
-    margin-block-start: -220px;
-    margin-left: -40px;
-  }
-}
-
-@media only screen and (max-width: 685px) {
-  .input-group {
-    .form-control,
-    .form-control-plaintext {
-      width: 100%;
-    }
-  }
-  .footerNew-top-section {
-    .container {
-      padding-left: 0px;
-      padding-right: 0px;
-    }
-  }
-}
-
-@media only screen and (max-width: 550px) {
-  .footerNew-top-section {
-    margin-top: 40px;
-    margin-left: -45px;
-    margin-right: -50px;
-  }
-  h3 {
-    font-size: 1em;
-  }
-}
-
-
-.footerNew-fourth-nav {
-  padding-bottom: 1em;
-  margin-top: 1em;
-}
-
-
-@media only screen and (max-width: 960px) {
-  .img-section {
-    margin-top: 2em;
+    color: white !important;
+    text-decoration: none;
   }
 
-  .footerNew-top-section {
-    border-bottom: 1px dashed $white-primary;
-    padding-bottom: 2em;
+  .footer-logo img {
+    width: 178px;
+    height: auto;
   }
 
-  .text-section {
-    margin-top: 2em;
-    text-align: left !important;
-  }
+  .header {
+    font-size: 20px;
 
-  .footerNew-fourth-nav {
-    span {
-      display: block;
+    li {
+      list-style: none;
+      font-size: 15px;
     }
   }
 
-  .footer-bottom-text {
-    text-align: center !important;
-    margin-top: 2em;
-  }
+  .subscribe {
+    position: relative;
+    font-size: 16px;
 
-  .footerNew-secondary-nav {
-    width: 50%;
-    display: inline-block;
-    border-bottom: none;
-    border-top: none;
-
-    ul {
-      flex-direction: column;
-    }
-  }
-
-  .footerNew-third-nav {
-    width: 50%;
-    display: inline-block;
-
-    ul {
-      flex-direction: column;
-    }
-  }
-}
-
-@media only screen and (max-width: 550px) {
-  .footerNew {
-    .boatImage {
-      width: 60px;
+    input[type="text"] {
+      border: none;
       height: 60px;
-      top: 22%;
+      border-radius: 50px;
+      background: #9C9C9D;
+      color: white;
+    }
+
+    input[type="text"]::placeholder {
+      color: rgb(200, 200, 200);
+    }
+
+    button {
       position: absolute;
-      left: 5%;
-    }
-    .planetImage {
-      width: 60px;
-      height: 50px;
-      top: 23%;
-      position: absolute;
-      right: 10%;
-    }
-  }
-
-  .footerNew-top-section{
-    padding-bottom: 5em;
-    .col-4 {
-      padding-right: 0px;
-      padding-left: 0px;
+      width: 115px;
+      border: none;
+      height: 60px;
+      border-radius: 50px;
+      right: 0;
+      background-color: $btn-primary;
+      color: white;
     }
   }
 
-  /* Overriding styles */
-  ::-webkit-input-placeholder {
-    font-size: 13px!important;
-  }
-  :-moz-placeholder { /* Firefox 18- */
-    font-size: 13px!important;
-  }
-  ::-moz-placeholder {  /* Firefox 19+ */
-    font-size: 13px!important;
-  }
+  .copy-write {
+    font-size: 13px;
 
+    a {
+      color: $btn-primary !important;
+    }
+  }
 }
 
-a {
-  color: white;
+@media only screen and (max-width: 480px) {
+  .copy-write {
+      font-size: 9px !important;
+  }
 }
+
+
+// .footerNew {
+//   background: url(/assets/img/footer-background.png) repeat;
+//   color: $white-primary;
+//   position: relative;
+//   //padding-top: 2em;
+//   // margin-top: 20%;
+
+//   input {
+//     border-radius: 20px;
+//   }
+
+//   .boatImage {
+//     background: url("/assets/img/bg-widget-2.png") no-repeat;
+//     width: 83px;
+//     height: 90px;
+//     top: 20%;
+//     position: absolute;
+//     left: 10%;
+//   }
+
+//   .planetImage {
+//     background: url("/assets/img/bg-widget-3.png") no-repeat;
+//     width: 83px;
+//     height: 90px;
+//     top: 20%;
+//     position: absolute;
+//     right: 10%;
+//   }
+
+//   .rounded-button {
+//     border-radius: 20px;
+//     background: $button-primary;
+//     color: #fff;
+//     padding: 0.25em 1.5em;
+//     position: unset;
+//     right: 3em;
+//     z-index: 1000;
+//   }
+// }
+
+// .footerNew-secondary-nav {
+//   //margin: 3em 0 1em;
+//   border-top: 1px dashed $white-primary;
+//   border-bottom: 1px dashed $white-primary;
+
+//   ul {
+//     flex-direction: row;
+//     justify-content: center;
+
+//     li {
+//       a {
+//         padding: 10px 1em !important;
+//         color: #fff;
+//         font-size: 1em;
+//       }
+//     }
+//   }
+// }
+
+// .footerNew-third-nav {
+//   ul {
+//     flex-direction: row;
+//     justify-content: center;
+
+//     li {
+//       a {
+//         padding: 10px 1em !important;
+//         color: #fff;
+//         font-size: 1em;
+//       }
+//     }
+//   }
+// }
+
+// .footer-info-bar {
+//   display: flex;
+//   justify-content: center;
+
+//   a {
+//     margin: 0 0 0 10px;
+
+//     i {
+//       padding: 0;
+//       width: 35px;
+//       height: 35px;
+//       border-radius: 100%;
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//     }
+
+//     .fa-facebook-official {
+//       background: #3c58a1;
+//       color: #fff;
+//     }
+
+//     .fa-instagram {
+//       color: #fff;
+//       background: linear-gradient(
+//           45deg,
+//           #f09433,
+//           #e6683c 25%,
+//           #dc2743 50%,
+//           #cc2366 75%,
+//           #bc1888
+//       );
+//     }
+
+//     .fa-youtube {
+//       background: #fe1f1f;
+//       color: #fff;
+//     }
+//   }
+// }
+
+// .logo-img-footer {
+//   width: 150px;
+//   height: auto;
+//   background: $white-primary;
+//   z-index: 1000;
+//   padding: 1%;
+//   border-radius: 20px;
+// }
+
+// @media only screen and (min-width: 850px) and (max-width: 960px) {
+//   .logo-img-footer {
+//     width: 100px;
+//     margin-block-start: -180px;
+//   }
+// }
+
+// @media only screen and (min-width: 750px) and (max-width: 850px) {
+//   .logo-img-footer {
+//     width: 90px;
+//     margin-block-start: -190px;
+//   }
+// }
+
+// @media only screen and (max-width: 750px) {
+//   .logo-img-footer {
+//     width: 80px;
+//     margin-block-start: -220px;
+//     margin-left: -40px;
+//   }
+// }
+
+// @media only screen and (max-width: 685px) {
+//   .input-group {
+//     .form-control,
+//     .form-control-plaintext {
+//       width: 100%;
+//     }
+//   }
+//   .footerNew-top-section {
+//     .container {
+//       padding-left: 0px;
+//       padding-right: 0px;
+//     }
+//   }
+// }
+
+// @media only screen and (max-width: 550px) {
+//   .footerNew-top-section {
+//     margin-top: 40px;
+//     margin-left: -45px;
+//     margin-right: -50px;
+//   }
+//   h3 {
+//     font-size: 1em;
+//   }
+// }
+
+
+// .footerNew-fourth-nav {
+//   padding-bottom: 1em;
+//   margin-top: 1em;
+// }
+
+
+// @media only screen and (max-width: 960px) {
+//   .img-section {
+//     margin-top: 2em;
+//   }
+
+//   .footerNew-top-section {
+//     border-bottom: 1px dashed $white-primary;
+//     padding-bottom: 2em;
+//   }
+
+//   .text-section {
+//     margin-top: 2em;
+//     text-align: left !important;
+//   }
+
+//   .footerNew-fourth-nav {
+//     span {
+//       display: block;
+//     }
+//   }
+
+//   .footer-bottom-text {
+//     text-align: center !important;
+//     margin-top: 2em;
+//   }
+
+//   .footerNew-secondary-nav {
+//     width: 50%;
+//     display: inline-block;
+//     border-bottom: none;
+//     border-top: none;
+
+//     ul {
+//       flex-direction: column;
+//     }
+//   }
+
+//   .footerNew-third-nav {
+//     width: 50%;
+//     display: inline-block;
+
+//     ul {
+//       flex-direction: column;
+//     }
+//   }
+// }
+
+// @media only screen and (max-width: 550px) {
+//   .footerNew {
+//     .boatImage {
+//       width: 60px;
+//       height: 60px;
+//       top: 22%;
+//       position: absolute;
+//       left: 5%;
+//     }
+//     .planetImage {
+//       width: 60px;
+//       height: 50px;
+//       top: 23%;
+//       position: absolute;
+//       right: 10%;
+//     }
+//   }
+
+//   .footerNew-top-section{
+//     padding-bottom: 5em;
+//     .col-4 {
+//       padding-right: 0px;
+//       padding-left: 0px;
+//     }
+//   }
+
+//   /* Overriding styles */
+//   ::-webkit-input-placeholder {
+//     font-size: 13px!important;
+//   }
+//   :-moz-placeholder { /* Firefox 18- */
+//     font-size: 13px!important;
+//   }
+//   ::-moz-placeholder {  /* Firefox 19+ */
+//     font-size: 13px!important;
+//   }
+
+// }
+
+// a {
+//   color: white;
+// }
